# RobinOS

./: .gitignore  CMakeLists.txt  CodeObject.cpp  CodeObject.hpp  Designdoc.md  MasterController.cpp  MasterController.hpp  MemoryManager.cpp  MemoryManager.hpp  Process.cpp  Process.hpp  Processor.cpp  Processor.hpp  README.md  RoundRobinSelect.cpp  RoundRobinSelect.hpp  RoundRobinwriteup  RoundRobinwriteup.md  Scheduler Write Up.docx  Scheduler.cpp  Scheduler.h  Strand.cpp  Strand.hpp  main.cpp  structureIdea.cpp  test.txt  testJobs.txt
code/: CMakeLists.txt  CodeObject.cpp  CodeObject.hpp  CodeUtilities.hpp  GlobalVariables.cpp  GlobalVariables.hpp  MemoryManager.cpp  MemoryManager.hpp  Process.cpp  Processor.cpp  Processor.hpp  RoundRobin.cpp  RoundRobin.hpp  RoundRobinSelect.cpp  RoundRobinSelect.hpp  Scheduler.cpp  Scheduler.h  Strand.hpp  Utilities.hpp  main.cpp
code/depreciated/: CodeObject.cpp.bckp  CodeObject.hpp.bckp  MasterController.cpp.bckp  MemoryManager.cpp.bckp  Process.hpp.bckp  Processor.cpp.bckp  RoundRobin.cpp.bckp  RoundRobin.hpp.bckp  Strand.cpp.bckp  main.cpp.bckp
docs/: Designdoc.md
